# 7610-final

./: .gitignore  README.md
restaurant-recommender/: README.md  test_full_flow.py  test_stream.py
restaurant-recommender/backend/: .env.example  README.md  conftest.py  debug_haidilao.py  examples.http  pyproject.toml  reproduce_issue.py  requirements.txt  start.command  test_gemini_integration.py  test_preferences.py
restaurant-recommender/backend/scripts/: build_flutter_web.sh  dev.sh  start_all_mac.sh
restaurant-recommender/backend/src/: config.py  main.py  models.py  utils.py
restaurant-recommender/backend/src/helloagents_restaurant_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
restaurant-recommender/backend/src/services/: bbox_builder.py  candidate_search.py  details.py  geoapify.py  preferences.py  ranking.py  reasoner.py  report.py  rerank.py  session.py  session_utils.py
restaurant-recommender/backend/src/static/: index.html
restaurant-recommender/backend/src/static/app/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
restaurant-recommender/backend/src/static/app/assets/: NOTICES
restaurant-recommender/backend/tests/: test_bbox.py  test_candidate_search.py  test_optimization.py  test_ranking.py  test_report.py  test_session.py
restaurant-recommender/eval/: judgments_us.jsonl  judgments_v1.jsonl  queries_us.jsonl  queries_v1.jsonl  run_eval.py
restaurant-recommender/frontend/: README.md  index.html  package-lock.json  package.json
restaurant-recommender/scripts/: start_dev.sh
(+18 files in other folders)
