[project]
name = "helloagents-restaurant-recommender"
version = "0.1.0"
description = "Geoapify-powered restaurant recommendation MVP using HelloAgents patterns."
authors = [ { name = "Hello-Agents Team" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "hello-agents>=0.2.8",
    "huggingface_hub>=0.23.0",
    "ddgs>=9.6.1",
    "python-dotenv==1.0.1",
    "requests>=2.31.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.32.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest>=8.2.0"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = ["E","F","I","D","D401","UP"]
lint.ignore = ["D417","E501","UP006","UP007","UP035"]
